examples/errors/other/E0500_invalid_type.hd
fn main(): void {
    let x: void = 42;
    return;
}
